--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,4 +12,12 @@
         android:layout_width="match_parent"
         android:layout_height="220dp"/>
 
+    <GridView
+        android:id="@+id/gridview"
+        android:numColumns="4"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
+        app:layout_constraintTop_toBottomOf="@+id/viewpager"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
